@@ -52,6 +52,12 @@ SUCH DAMAGE.
 #ifndef _OPENCLAS_K_SHORTEST_PATH_HPP_
 #define _OPENCLAS_K_SHORTEST_PATH_HPP_
 
+//	workaround for remove VC min(a,b) macro function definition,
+//	which is make std::min() not working.
+#if defined(_MSC_VER) && defined(min)
+#undef min
+#endif	//	min
+
 #include "common.hpp"
 #include <boost/graph/graph_traits.hpp>
 #include <boost/graph/graph_concepts.hpp>
@@ -79,7 +85,7 @@ namespace openclas {
 
 	//	Find all paths of given pair of node in a DAG. (DFS-like algorithm)
 	template <class IncidenceGraph>
-	void dag_all_paths(const IncidenceGraph& g, 
+	void dag_all_paths(IncidenceGraph& g, 
 		typename graph_traits<IncidenceGraph>::vertex_descriptor begin, 
 		typename graph_traits<IncidenceGraph>::vertex_descriptor end,
 		std::vector<path_type>& result_paths,
@@ -97,7 +103,7 @@ namespace openclas {
 			typename graph_traits<IncidenceGraph>::out_edge_iterator ei, ei_end;
 			for (tie(ei, ei_end) = out_edges(begin, g); ei != ei_end; ++ei) {
 				typename graph_traits<IncidenceGraph>::vertex_descriptor v = target(*ei, g);
-				typename property_map<IncidenceGraph, edge_weight_t>::const_type
+				typename property_map<IncidenceGraph, edge_weight_t>::type
 					w_map = get(edge_weight, g);
 				current_path.weight += w_map[edge(begin, v, g).first];
 				dag_all_paths(g, v, end, result_paths, current_path);
@@ -107,21 +113,24 @@ namespace openclas {
 
 	//	Find k-shortest-path in DAG.
 	template <class IncidenceGraph>
-	void dag_k_shortest_paths(const IncidenceGraph& g, 
+	void dag_k_shortest_paths(IncidenceGraph& g, 
 		typename graph_traits<IncidenceGraph>::vertex_descriptor begin, 
 		typename graph_traits<IncidenceGraph>::vertex_descriptor end,
 		std::vector<path_type>& result_paths,
 		int k)
 	{
+		if (num_vertices(g) == 0)
+			return;	//	return if g is empty
+
 		if (k == 1) {
 			path_type shortest_path;
 			dag_shortest_path(g, begin, end, shortest_path);
 			result_paths.push_back(shortest_path);
 		}else{
 			std::vector<path_type> candidate_paths;
-			dag_all_paths(g, begin, end, std::list<size_t>(), candidate_paths);
+			dag_all_paths(g, begin, end, candidate_paths);
 
-			k = std::min(k, candidate_paths.size());
+			k = std::min(k, static_cast<int>(candidate_paths.size()));
 			std::partial_sort(candidate_paths.begin(), candidate_paths.begin() + k, candidate_paths.end());
 			result_paths.assign(candidate_paths.begin(), candidate_paths.begin() + k);
 		}
@@ -129,14 +138,17 @@ namespace openclas {
 
 	//	Find shortest-path in DAG. O(n+m)
 	template <class Graph>
-	void dag_shortest_path(const Graph& g, 
+	void dag_shortest_path(Graph& g, 
 		typename graph_traits<Graph>::vertex_descriptor begin, 
 		typename graph_traits<Graph>::vertex_descriptor end,
 		path_type& result_path)
 	{
-		typename property_map<Graph, vertex_distance_t>::const_type
+		if (num_vertices(g) == 0)
+			return;	//	return if g is empty
+
+		typename property_map<Graph, vertex_distance_t>::type
 			d_map = get(vertex_distance, g);
-		typename property_map<Graph, vertex_predecessor_t>::const_type
+		typename property_map<Graph, vertex_predecessor_t>::type
 			p_map = get(vertex_predecessor, g);
 		dag_shortest_paths(g, begin, distance_map(d_map).predecessor_map(p_map));
 
